# Hetu

./: .gitignore  hetu.exp  hetu_refactor.exp
examples/efficiency/: draw.py  env.sh
examples/efficiency/draw/: draw_combine.py  draw_packing.py
examples/gpt/scripts/: train_hetu_exp.sh
examples/hetero/: new_train_hetu.py
examples/hetero/scripts/: new_train_hetu.sh
examples/hotspa/scripts/: env.sh  host.yaml  llama_hot_switch_trainer_grpc.sh
examples/hydraulis/: analyze_dataset.py  draw_simulation_combine.py  hetu_llama.py  llama_trainer.py  pssh_strategy_only_start.py  test_kv_store.py  train_hetu.py
examples/hydraulis/data_utils/: bucket.py  llama_dataloader.py  llama_dataset.py
examples/hydraulis/draw/: analyze_dataset.py  draw_e2e.py  draw_e2e_another.py  draw_simulation_combine.py  draw_simulation_combine_shrink.py
examples/hydraulis/parallel_utils/: generate_ds.py
examples/hydraulis/results/: draw_e2e.py
examples/hydraulis/scripts/: env_A100.sh  env_A800.sh  host_single.yaml  test_planner.sh  train_hetu.sh  train_hetu_tencent.sh  train_trainer.sh
examples/hydraulis/strategy/: __init__.py  cost_model.py  distributed_call.py  dynamic_pulp.py  generate_strategy.py  generate_strategy_7b_A100.py  static.py  strategy_tree.py
examples/lobra/utils/: ds_parallel_config.py
examples/mllm/: arugments.py  mllm_config.py  train_mllm.py
examples/mllm/data_utils/: preprocess_data.py
examples/mllm/model/: hetu_llama.py  hetu_mllm.py  hetu_vision.py
examples/mllm/parallel_utils/: __init__.py  generate_ds.py
examples/mllm/scripts/: train_hetu.sh
examples/mmdit/: arugments.py  mmdit_config.py  train_mmdit.py
examples/mmdit/data_utils/: __init__.py  indexed_dataset.py  llama_dataset.py  preprocess_data.sh  preprocess_image.py  preprocess_multimodal_data.py
examples/mmdit/diffusion/: __init__.py  gaussian_diffusion.py
examples/mmdit/model/: hetu_mmdit.py  hetu_t5.py  hetu_vae.py  unet_2d_blocks.py
examples/mmdit/parallel_utils/: __init__.py  generate_ds.py  read_ds.py
examples/mmdit/scripts/: train_hetu.sh
examples/nlp/gpt/: profile_all_strategy.sh  profile_all_strategy_13b.sh  profile_all_strategy_32b.sh
hetu/: CMakeLists.txt
hetu/core/: memory_pool.cc  ndarray.cc  ndarray.h  ndarray_storage.h  symbol.cc
hetu/graph/: common.h  define_and_run_graph.cc  define_and_run_graph.h  distributed_states.cc  distributed_states.h  executable_graph.cc  executable_graph.h  graph.cc  graph.h  operator.cc  operator.h  pre_post_exec_graph.cc  profiler.cc  subgraph.cc  subgraph.h  switch_exec_graph.cc  switch_exec_graph.h  tensor.cc  tensor.h
hetu/graph/ops/: Abs.cc  Arange.cc  Arithmetics.cc  Arithmetics.h  (+81 more)
python/: CMakeLists.txt
python/elastic/engine/data_utils/gpt/: bucket.py
python/hetu/: __init__.py
python/hetu/_binding/codegen/: ops.yml
python/hetu/_binding/core/: ndarray.cc
python/hetu/models/gpt/: generate_gpt_4d_config.py  generate_gpt_hetero_4d_config.py
python/hetu/models/llama/: generate_llama_4d_config.py  generate_llama_hetero_4d_config.py  llama_model.py
python/hetu/nn/modules/: __init__.py  parallel_multi_ds.py
python/hetu/rpc/: heturpc_async_server.py  pssh_start.py
python/hetu/rpc/kv_store/: __init__.py  client.py  producer_consumer.py  server.py
python/hetu/utils/parallel/: __init__.py  distributed_init.py  read_ds.py
python_refactor/hetu/: __init__.py
(+54 files in other folders)
